# axum-app

./: .env  .eslintignore  .gitignore  Cargo.toml  README.md  diesel.toml  next.config.js  package.json
.github/workflows/: deploy-api.yaml  deploy-web.yaml  deploy.yaml
api/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/domain/: Cargo.toml
api/infrastructure/: Cargo.toml
api/infrastructure/src/: lib.rs  modules.rs
api/infrastructure/src/firebase/: auth.rs
api/infrastructure/src/model/: stock.rs  user.rs
api/infrastructure/src/persistence/: postgres.rs
api/infrastructure/src/repository/: health_check.rs  mod.rs  stock.rs  user.rs
api/migrations/: up.sql
api/server/: Cargo.toml
api/src/: main.rs
api/src/domains/: posts.rs
api/src/server/: mod.rs
api/src/usecases/: posts.rs
api/usecase/: Cargo.toml
docker/web/: Dockerfile
openapi/: main.yaml
pages/: _middleware.ts  index.tsx
pages/api/: hello.ts
src/: main.rs
src/domains/: mod.rs  posts.rs
src/server/: handlers.rs  mod.rs
src/usecases/: posts.rs
web/: .eslintrc.js  Dockerfile  aspida.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
web/api/: $api.ts
web/components/: Foo.tsx
web/config/: development.json  local.json  production.json
web/hooks/: currentUser.ts  health.ts  imageUpload.ts  user.ts
web/lib/: aspida.ts  firebase.ts
web/pages/: [screen_name].tsx  _app.tsx  _document.tsx  _error.tsx  edit.tsx  index.tsx  signup.tsx
web/recoil/: atoms.ts  currentUserState.ts
web/utils/: APIClientUtils.ts  social.ts
(+96 files in other folders)
