[package]
edition = "2021"
name = "axum-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.0"
diesel = {version = "*", features = ["mysql"]}
hyper = {version = "0.14", features = ["full"]}
tokio = {version = "1", features = ["full"]}
