[package]
edition = "2021"
name = "axum-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.2"
dotenv = "0.15.0"
failure = "0.1.8"
hyper = {version = "0.14", features = ["full"]}
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"
tokio = {version = "1", features = ["full"]}
tower = {version = "0.4", features = ["full"]}
