[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
anyhow = "1.0.44"
once_cell = "1.8.0"
tokio = { version = "1.12.0", features = ["rt", "macros", "test-util"] }
async-trait = "0.1.51"
chrono = "0.4.19"
ulid = "0.5.0"
http = "0.2.5"
derive-new = "0.5.9"
jwks-client = "0.2.0"
serde_derive = "1.0.132"
serde = { version = "1.0", features = ["derive"] }
